--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@devexpress/dx-react-core": "^2.7.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.1",
+    "@material-ui/core": "4.11.4",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@mui/x-data-grid": "^4.0.0",
